Swedish and German translations.
--HG--
branch : Release 7.2.362

--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/ReportTexts/Resources.de.resx
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/ReportTexts/Resources.de.resx
@@ -954,4 +954,13 @@
   <data name="ResRequestPeriod" xml:space="preserve">
     <value>Anfrageperiode</value>
   </data>
+  <data name="RedirectNow" xml:space="preserve">
+    <value>Jetzt umleiten</value>
+  </data>
+  <data name="SessionExpiredHeader" xml:space="preserve">
+    <value>Zeitüberschreitung</value>
+  </data>
+  <data name="SessionExpiredText" xml:space="preserve">
+    <value>Ihre Sitzung wurde beendet, da Sie längere Zeit nicht auf der Seite aktiv waren. Sie werden gleich auf die Anmelde-Seite umgeleitet.</value>
+  </data>
 </root>
