--- a/Teleopti.Ccc.UserTexts/Resources.sv.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.sv.resx
@@ -10399,4 +10399,16 @@ Licensen heter "{3}" och har dessa tillval aktiverade:
   <data name="MissingAbsenceType" xml:space="preserve">
     <value>Saknad frånvarotyp.</value>
   </data>
+  <data name="YourPreferencesCanResultXHours" xml:space="preserve">
+    <value>Dina önskemål kan ge {0} timmar.</value>
+  </data>
+  <data name="YourPreferencesCanResultXToYHours" xml:space="preserve">
+    <value>Dina önskemål kan ge {0} till {1} timmar.</value>
+  </data>
+  <data name="YouShouldWorkBetweenXAndYHours" xml:space="preserve">
+    <value>Du ska arbeta {0} till {1} timmar.</value>
+  </data>
+  <data name="SendRequest" xml:space="preserve">
+    <value>Skicka</value>
+  </data>
 </root>
