--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10681,4 +10681,8 @@ These options are activated:
     <value>The interval length of this subskill should be the same as its parent skill, which is {0} minutes.</value>
     <comment>The interval length of this subskill should be the same as its parent skill, which is 15 minutes.</comment>
   </data>
+  <data name="WorkloadWindowAlreadyOpen" xml:space="preserve">
+    <value>This Workload {0} window is open. Please close it as it is no longer valid.</value>
+    <comment>please close workload window.</comment>
+  </data>
 </root>
