--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -10725,9 +10725,9 @@ These options are activated:
     <value>Missing absence type.</value>
     <comment>Missing absence type.</comment>
   </data>
-  <data name="SendRequest" xml:space="preserve">
-    <value>Send</value>
-    <comment>Send a text request/absence request...</comment>
+  <data name="SubmitRequest" xml:space="preserve">
+    <value>Submit</value>
+    <comment>Submit a text request/absence request...</comment>
   </data>
   <data name="WorkloadWindowAlreadyOpen" xml:space="preserve">
     <value>This Workload {0} window is open. Please close it as it is no longer valid.</value>
