#16111 Usability: Delete ruleset from Shift Bag view does not really delete and some fixes/updates for #15419

--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10749,4 +10749,8 @@ These options are activated:
     <value>Longterm Forecast</value>
     <comment>Longterm Forecast</comment>
   </data>
+  <data name="ManageRuleSets" xml:space="preserve">
+    <value>Manage rule sets</value>
+    <comment>Manage rule sets</comment>
+  </data>
 </root>
